--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,12 +79,28 @@
 
 * {
     box-sizing: border-box;
+    
 }
+
+::-webkit-scrollbar{
+    width: 12px;
+
+}
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(rgb(255, 255, 255), #A8C3E1 ,#79ade8,#3974B7);
+    border-radius: 5px;
+    transition: all ease 0.5s;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: linear-gradient(transparent,black);
+    
+}
+
 
 html {
     margin: 0;
     padding: 0;
-    font-size: 10px;
+    font-size: 9px;
     overflow: hidden;
     overflow-y: auto;
     scroll-behavior: smooth;
@@ -246,23 +262,23 @@ h6 a,
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     h1,
     .h1 {
-        font-size: 38px;
+        font-size: 34.2px;
     }
     h2,
     .h2 {
-        font-size: 32px;
+        font-size: 29.8px;
     }
     h3,
     .h3 {
-        font-size: 28px;
+        font-size: 25.2px;
     }
     h4,
     .h4 {
-        font-size: 24px;
+        font-size: 21.6px;
     }
     h5,
     .h5 {
-        font-size: 18px;
+        font-size: 16.2px;
     }
 }
 
@@ -10568,7 +10584,7 @@ body.template-color-1 {
 }
 
 .header-wrapper {
-    height: 122px;
+    height: 100px;
     padding: 0 64px;
 }
 
@@ -10838,7 +10854,7 @@ body.template-color-1 {
     position: fixed;
     top: 0;
     z-index: 999;
-    width: 100%;
+    width: 90%;
 }
 
 .rn-header.header--fixed {
@@ -13595,7 +13611,7 @@ figcaption {
 }
 
 .rn-header-image-area {
-    height: 350px;
+    height: 300px;
 }
 
 .rn-content-wrapper {
