--- a/assets/maps/elements/_banner.scss
+++ b/assets/maps/elements/_banner.scss
@@ -1267,7 +1267,7 @@
 
     .header-right {
         display: flex;
-        align-items: start;
+        align-items: Starting;
         flex-wrap: wrap;
 
         @media #{$md-layout} {
