--- a/assets/maps/elements/_clients.scss
+++ b/assets/maps/elements/_clients.scss
@@ -1,4 +1,4 @@
-// Tab Area Start----->
+// Tab Area Starting----->
 
 .tab-navigation-button {
     float: left;
@@ -351,7 +351,7 @@
 }
 
 
-// client area start
+// client area Starting
 .rn-client-style-2 {
     .skill-style-1 {
         margin-bottom: 0;
