--- a/assets/maps/elements/_skill.scss
+++ b/assets/maps/elements/_skill.scss
@@ -162,7 +162,7 @@
             padding-left: 14px;
         }
 
-        // Start Single List
+        // Starting Single List
         .resume-single-list {
             position: relative;
             z-index: 2;
