--- a/assets/maps/elements/_white-version.scss
+++ b/assets/maps/elements/_white-version.scss
@@ -590,7 +590,7 @@ body {
         background: #ECF0F3;
     }
 
-    // home developer start
+    // home developer Starting
     .slide-style-2 {
         .slide .slider-wrapper .background-image-area {
             box-shadow: var(--gradient-red-hover);
@@ -1556,7 +1556,7 @@ body {
         }
     }
 
-    // pricing area Start
+    // pricing area Starting
     .rn-pricing-area {
         .navigation-wrapper {
             box-shadow: var(--shadow-white-3);
@@ -1666,7 +1666,7 @@ body {
         }
     }
 
-    // footer area start
+    // footer area Starting
     .rn-contact-area {
         .contact-about-area {
             background: var(--gradient-box-w);
@@ -1733,7 +1733,7 @@ body {
         }
     }
 
-    // contact area Start
+    // contact area Starting
     .rn-contact-area {
         .contact-form-wrapper {
             background: var(--gradient-box-w);
@@ -1785,7 +1785,7 @@ body {
         }
     }
 
-    // Start footer area
+    // Starting footer area
     .footer-area {
         .description {
             color: var(--color-body-white);
