--- a/assets/maps/elements/_about.scss
+++ b/assets/maps/elements/_about.scss
@@ -1,4 +1,4 @@
-    // About Area Start
+    // About Area Starting
     .rn-about-area {
         .image-area {
             padding: 30px;
@@ -207,7 +207,7 @@
                         margin-bottom: -8px;
 
                         @media #{$smlg-device} {
-                            justify-content: flex-start;
+                            justify-content: flex-Starting;
                         }
 
                         @media #{$md-layout} {
@@ -263,7 +263,7 @@
                 .skill-share-inner {
                     &.skill-share-inner-width {
                         .skill-share {
-                            justify-content: flex-start;
+                            justify-content: flex-Starting;
 
                             @media #{$large-mobile} {
                                 justify-content: center;
@@ -378,7 +378,7 @@
             .carousel-indicators {
                 top: 84%;
                 left: 0;
-                justify-content: flex-start;
+                justify-content: flex-Starting;
                 margin-left: 0;
 
                 li {
