--- a/assets/maps/header/_header.scss
+++ b/assets/maps/header/_header.scss
@@ -54,7 +54,7 @@ body.template-color-1 {
 
     .header-left {
         flex-basis: 20%;
-        justify-content: flex-start;
+        justify-content: flex-Starting;
         display: flex;
     }
 
@@ -163,7 +163,7 @@ body.template-color-1 {
     }
 }
 
-// home sticky start
+// home sticky Starting
 .home-sticky {
     .rn-header.header--fixed.sticky {
         background-color: transparent;
@@ -331,7 +331,7 @@ body.template-color-1 {
 
 
 
-// Menu area start,,,,
+// Menu area Starting,,,,
 
 @media #{$smlg-device} {
     .rn-header {
